[gd_scene load_steps=7 format=3 uid="uid://mes4efbefx"]

[ext_resource type="Script" path="res://Game/Area_hutan/Main/Area_hutan.gd" id="1_ptkcm"]
[ext_resource type="Texture2D" uid="uid://ctamgsqvnu6xy" path="res://Game/Area_hutan/Assets/bg_main/bg_main.png" id="2_oqamr"]
[ext_resource type="Script" path="res://Game/Area_hutan/Lib/subarea_sungai/Subarea_sungai.gd" id="3_g3lnm"]
[ext_resource type="Texture2D" uid="uid://c6i4iy3p0pg7r" path="res://Game/Area_hutan/Assets/item_bg_sungai/sungai_normal.png" id="3_ldgps"]
[ext_resource type="Script" path="res://Game/Area_hutan/Lib/subarea_pohons/Subarea_pohons.gd" id="3_ukjct"]
[ext_resource type="PackedScene" uid="uid://u8ardfqc8uvv" path="res://Game/Area_hutan/Lib/item_bg_wave/wave.tscn" id="5_yeu54"]

[node name="Area_Hutan" type="Node2D"]
script = ExtResource("1_ptkcm")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 3840.0
offset_bottom = 2160.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_oqamr")
metadata/_edit_lock_ = true

[node name="Subarea_sungai" type="Node2D" parent="."]
script = ExtResource("3_g3lnm")

[node name="TextureRect" type="TextureRect" parent="Subarea_sungai"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ldgps")

[node name="Waves" type="Node2D" parent="Subarea_sungai"]

[node name="Wave" parent="Subarea_sungai/Waves" instance=ExtResource("5_yeu54")]

[node name="Subarea_pohons" type="Node2D" parent="."]
script = ExtResource("3_ukjct")

[node name="Part_mahonis" type="Node2D" parent="Subarea_pohons"]

[node name="Part_pinuses" type="Node2D" parent="Subarea_pohons"]

[node name="Part_jatis" type="Node2D" parent="Subarea_pohons"]
metadata/_edit_lock_ = true

[node name="Pohons_progress_bar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
